<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>esibot_bringup</name>
  <version>0.0.1</version>
  <description>ESIBOT bringup package with real hardware driver and odometry calculation</description>

  <maintainer email="mi_badaoui@esi.dz">BADAOUI IKRAM</maintainer>
  <maintainer email="ms_chattah@esi.dz">CHATTAH SALSABILA</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <depend>tf2_ros</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-rpi.gpio</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>