<?xml version="1.0"?>
<package format="3">
  <name>esibot_description</name>
  <version>0.1.0</version>
  <description>ESIBOT robot description with URDF/Xacro and state publisher launch.</description>

  <maintainer email="team@esibot.local">EsiBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
