<?xml version="1.0"?>
<package format="3">
  <name>esibot_sensors</name>
  <version>0.0.1</version>
  <description>ESIBOT sensors package with radar node</description>

  <maintainer email="ms_chattah@esi.dz">CHATTAH SALSABILA</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-gpiozero</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
